--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "engines": {
-    "node": "20.17.0.x"
-  },
+  "engines": { "node": "22.x" }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
